Fixed breadcrumb spacing

--- a/cubs/assets/css/layout.css
+++ b/cubs/assets/css/layout.css
@@ -19,8 +19,7 @@
     padding-top: 0.5em;
     padding-bottom: 0.5em;
     padding-left: 2%;
-    padding-right: 2%;
-  
+    padding-right: 2%;  
 }
 .contentWallTitle{
     text-align: center;
@@ -82,16 +81,6 @@ footer{
         'volunteer';
     padding: 2%;
 }
-
-.story-title-text{
-    max-width: 1200px;
-    margin: auto;
-}
-
-.story-title-text h1{
-    margin: 0 0 0.5em;
-}
-
 .contentWall {
     background: #ffffff;
     column-count: 1;
