--- a/cubs/assets/css/slideshow.css
+++ b/cubs/assets/css/slideshow.css
@@ -1,4 +1,4 @@
-* {box-sizing:border-box}
+/* {box-sizing:border-box} */
 
 /* Slideshow container */
 .slideshow-container {
@@ -22,7 +22,7 @@
   padding: 16px;
   color: white;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 1.25rem;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
@@ -42,10 +42,12 @@
 /* Caption text */
 .text {
   color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
+  background-color: rgba(0,0,0,0.8);
+
+  font-size: 1.25rem;
+  padding: 8px 0px 8px 0px;
   position: absolute;
-  bottom: 8px;
+  bottom: 5px;
   width: 100%;
   text-align: center;
 }
@@ -53,7 +55,7 @@
 /* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
-  font-size: 12px;
+  font-size: 1.25rem;
   padding: 8px 12px;
   position: absolute;
   top: 0;
